--- a/style.css
+++ b/style.css
@@ -152,13 +152,16 @@ h1 {
 	height: 16px;
 	margin-right: 20px;
 }
+
+/* info section  */
 .info-section {
 	display: flex;
 	margin: 0px 120px;
 	align-items: center;
+	justify-content: space-between;
 }
 .info-section p {
-	max-width: 535px;
+	max-width: 500px;
 }
 
 .info-item img {
@@ -189,25 +192,105 @@ p {
 	color: #4a4545;
 }
 
-.info-bannar {
+.info-banner {
+	position: relative;
+}
+.info-banner #banner-img1 {
+	position: absolute;
+	border-radius: 20px;
+	right: 120px;
+	box-shadow: 0px 21px 40px 0 #7a7575a1;
+	height: 500px;
+}
+
+.info-banner #banner-img2 {
+	margin-top: 100px;
+	box-shadow: 0px 21px 20px 0 #7a757531;
+	border-radius: 20px;
+}
+
+.info-text .btn-purple {
+	margin-left: 64px;
+}
+
+/* contact section  */
+.contact-section {
+	margin: 64px 120px;
+	position: relative;
+}
+.contact-section h2 {
+	text-decoration: underline;
+	text-underline-offset: 8px;
+	position: absolute;
+	left: 45%;
+	top: 50px;
+}
+.contact-section .container {
+	position: relative;
+	margin: 64px;
+	display: flex;
+	justify-content: space-between;
+	padding: 120px 60px 60px 60px;
+	box-shadow: 21px 21px 50px 30px #7a757525;
+	border-radius: 10px;
+	z-index: 1;
+	background-color: #fff;
+}
+
+.container .text {
+	max-width: 300px;
+}
+
+form {
+	width: 500px;
+}
+form input {
+	width: 100%;
+	/* margin: 20px 0px; */
+	padding: 10px;
+}
+
+fieldset {
+	height: 70px;
+	margin: 20px 0px;
 	display: flex;
 	align-items: center;
-	width: 660px;
-	height: 560px;
-	position: relative;
-	/* border: 1px solid tomato; */
+	justify-content: center;
 }
-.info-bannar img.img-1 {
-	position: absolute;
-	height: 556px;
-	width: 320px;
-	z-index: 2;
-	right: 170px;
-	bottom: 0px;
+fieldset input {
+	border: none;
+	margin: 0px;
+	height: 100%;
+	outline: none;
 }
-.info-bannar img.img-2 {
-	height: 460px;
+
+form fieldset:first-child {
+	height: 85px;
+}
+
+.info :first-child {
+	padding-right: 15px;
+}
+.info {
+	margin: 20px 0px;
+}
+.social-links * {
+	padding-right: 20px;
+	font-size: 34px;
+	cursor: pointer;
+}
+
+.contact-banner {
+	margin-top: 40px;
+}
+.contact-section .corner {
 	position: absolute;
+	z-index: -1;
+}
+.top {
 	right: 0px;
-	top: 120px;
+	top: -64px;
+}
+.corner {
+	bottom: -64px;
 }
